@@ -298,7 +298,7 @@ function pts_version_codenames()
 }
 
 pts_define('PTS_VERSION', '10.0.0m3');
-pts_define('PTS_CORE_VERSION', 9930);
+pts_define('PTS_CORE_VERSION', 9931);
 pts_define('PTS_RELEASE_DATE', '20201001');
 pts_define('PTS_CODENAME', 'Finnsnes');
 
